--- a/projects/proposals/proposal_template.yaml
+++ b/projects/proposals/proposal_template.yaml
@@ -7,8 +7,11 @@ project:
         estimatedTime:
     initialMembers:
         - name:
+          repo1user: ''
         - name:
+          repo1user: ''
 
 similarProjects:
     - name:
+      url: 
       comparison:
