Add GEOINT AppStore

--- a/projects/proposals/p1-app-marketplace.yml
+++ b/projects/proposals/p1-app-marketplace.yml
@@ -11,6 +11,6 @@ project:
           repo1user: '@akallhoff'
 
 similarProjects:
-    - name: 
-      url: 
-      comparison: 
+    - name: "GEOINT AppStore"
+      url: "https://appstore.nga.mil/Home/Store"
+      comparison: "App Store for GEOINT, focused on mobile applications"
