Add quotes to my name

--- a/projects/proposals/p1-app-marketplace.yml
+++ b/projects/proposals/p1-app-marketplace.yml
@@ -7,7 +7,7 @@ project:
         description: "IL2-staging deployment of solution with workflow including adding new apps, grouping users by teams, group apps by tags, and communicating with app team"
         estimatedTime: "2-3 months"
     initialMembers:
-        - name: Anthony Kallhoff
+        - name: "Anthony Kallhoff"
           repo1user: '@akallhoff'
 
 similarProjects:
