--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 meetings/recordings/16FEB21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/16MAR21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/6APR21.mp4 filter=lfs diff=lfs merge=lfs -text
+meetings/recordings/20APR21.mp4 filter=lfs diff=lfs merge=lfs -text
