--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,4 @@
 
 CODEOWNERS @abryan562 @phillip.record @matthew.huston @andrew.greene @blakeburkhart @celkins @joshwolf @barakstout1 @tim.gast @akallhoff @idunbarh @zayd.ma
+
+**/* @root
