new project revamp

--- a/projects/sandbox/new_projects/proposal_template.yaml
+++ b/projects/sandbox/new_projects/proposal_template.yaml
@@ -1,7 +1,8 @@
 project:
     name:
     description:
-    repo url:
+    maturity-level:
+    repoUrl:
     problemStatement:
     mvpMilestone:
         description:
