--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ meetings/recordings/16MAR21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/6APR21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/20APR21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/4MAY21.mp4 filter=lfs diff=lfs merge=lfs -text
+meetings/recordings/18MAY21.mp4 filter=lfs diff=lfs merge=lfs -text
