--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 
-CODEOWNERS @abryan562 @phillip.record @matthew.huston @andrew.greene @blakeburkhart @celkins @joshwolf @barakstout1 @tim.gast @akallhoff @idunbarh @zayd.ma
+CODEOWNERS @abryan562 @phillip.record @matthew.huston @andrew.greene @blakeburkhart @celkins @joshwolf @barakstout1 @tim.gast @anthony.butt @idunbarh @zayd.ma
 
 **/* @root
