--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ meetings/recordings/18MAY21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/1JUN21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/15JUN21.mp4 filter=lfs diff=lfs merge=lfs -text
 meetings/recordings/16JUL21.mp4 filter=lfs diff=lfs merge=lfs -text
+meetings/recordings/17AUG21.mp4 filter=lfs diff=lfs merge=lfs -text
