Update links and outdated references

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 
-CODEOWNERS @abryan562 @phillip.record @matthew.huston @andrew.greene @blakeburkhart @celkins @joshwolf @barakstout1 @tim.gast @anthony.butt @idunbarh @zayd.ma
+CODEOWNERS @abryan562 @phillip.record @matthew.huston @andrew.greene @blakeburkhart @celkins @barakstout1 @tim.gast @anthony.butt @idunbarh @zayd.ma @gabe.scarberry
 
 **/* @root
 
