Expanded proposal template

--- a/projects/getting-started/proposal_template.yaml
+++ b/projects/getting-started/proposal_template.yaml
@@ -1,11 +1,84 @@
-project:
-    name:
-    description:
-    maturity-level:
-    repoUrl:
-    problemStatement:
-    initialMembers:
-        - name:
-          repo1user: ''
-        - name:
-          repo1user: ''
+apiVersion: bbtoc/v1alpha
+kind: Project
+# NOTE: Remove lines that are not applicable
+metadata:
+  # Sandbox: Name of the product to be evaluated
+  name: ""
+
+  # Sandbox: Product vendor (opensource if no vendor)
+  vendor: ""
+
+  # Sandbox: Short description of the product
+  description: ""
+
+  # Sandbox: URL(s) to product website for further information
+  website:
+  - ""
+
+  # Sandbox: product source code repositories (e.g. github.com).  If not opensource, put "Proprietary"
+  sourceCode:
+  - ""
+
+  # Sandbox: Product licenses (e.g. Apache 2.0, GPL 3.0, MIT, Proprietary).  Include both free and paid tiers if they exist.
+  license:
+  - ""
+
+  # Sandbox: Value the product brings to the Big Bang community
+  purpose: ""
+
+  # Maturity level of the package
+  maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
+
+  # Sandbox: Points of contact for project (at least 2)
+  contacts:
+  - name: ""
+    repo1user: ""
+  - name: ""
+    repo1user: ""
+
+spec:
+  # Sandbox: Package(s) contained in the product (e.g. operator and application).  Each package will have its own repository in repo1.
+  packages:
+    # Sandbox: Name of the package
+  - name: ""
+
+    # Sandbox: Big Bang repository (i.e. https://repo.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
+    repository: ""
+
+    # Incubating: List of images contained in the package.
+    images:
+      # Incubating: Name of the image
+      - name: ""
+
+        # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
+        repository: ""
+
+        # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
+        approval: ""
+
+    # Graduated: Links to required documentation
+    documentation: []
+
+  # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
+  signOffs:
+
+    # Sandbox: Verify required files (e.g. license, codeowners, contributors) in git repository
+    requiredFiles: ""
+
+    # Sandbox: Demonstratable product
+    productDemonstration: ""
+
+    # Incubating: demonstrated support through contributions and feature releases
+    committedSupport: ""
+
+    # Graduated: Full Big Bang implementation
+    bigbangImplementation: ""
+
+    # Graduated: Deployable against documented use cases
+    productDeployable: ""
+
+    # Graduated: Security support documentation
+    securityDocs: ""
+
+    # Graduated: Cyber security review and penetration testing
+    cybersecurity: ""
