--- a/projects/sandbox/twistlock.yaml
+++ b/projects/sandbox/twistlock.yaml
@@ -3,17 +3,17 @@ kind: Project
 # NOTE: Remove lines that are not applicable
 metadata:
   # Sandbox: Name of the product to be evaluated
-  name: "Jira"
+  name: "Prisma Cloud Compute"
 
   # Sandbox: Product vendor (opensource if no vendor)
-  vendor: "Atlassian"
+  vendor: "Prisma Cloud"
 
   # Sandbox: Short description of the product
-  description: "Jira Software is built for every member of your software team to plan, track, and release great software."
+  description: "The Twistlock Platform provides vulnerability management and compliance across the application lifecycle by scanning images and serverless functions to prevent security and compliance issues from progressing through the development pipeline, and continuously monitoring all registries and environments."
 
   # Sandbox: URL(s) to product website for further information
   website:
-  - "https://www.atlassian.com/software/jira"
+  - "https://docs.paloaltonetworks.com/prisma/prisma-cloud.html"
 
   # Sandbox: product source code repositories (e.g. github.com).  If not opensource, put "Proprietary"
   sourceCode:
@@ -24,66 +24,64 @@ metadata:
   - "Proprietary"
 
   # Sandbox: Value the product brings to the Big Bang community
-  purpose: "Issue Tracking, Collaboration"
+  purpose: "Runtime Security"
 
   # Maturity level of the package
   maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
 
   # Sandbox: Points of contact for project (at least 2)
   contacts:
-  - name: "Arun Sanna"
-    repo1user: "@asanna"
-  - name: "Bryan Pfeiffer"
-    repo1user: "@bryan.pfeiffer1"
-  - name: "Sunny Xu"
-    repo1user: "@snxu"
-  - name: "Andrew Mitchell"
-    repo1user: "@andrew.mitchell"
+  - name: "Micah Nagel"
+    repo1user: "@micah.nagel"
+  - name: "Thomas Runyon"
+    repo1user: "@runyontr"
+  - name: "Ryan Garcia"
+    repo1user: "@ryan.j.garcia"
+  - name: Thomas Burton
+    repo1user: "@thoams.burton"
 
 spec:
   # Sandbox: Package(s) contained in the product (e.g. operator and application).  Each package will have its own repository in repo1.
   packages:
     # Sandbox: Name of the package
-  - name: "jira"
+  - name: "Twistlock"
 
     # Sandbox: Big Bang repository (i.e. https://repo.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
-    repository: "https://repo1.dso.mil/platform-one/big-bang/apps/third-party/jira"
+    repository: "Proprietary"
 
     # Incubating: List of images contained in the package.
     images:
-
-    # Incubating: List of images contained in the package.
-    images:
-    # Incubating: Name of the image
-    - name: "registry1.dso.mil/ironbank/atlassian/jira-data-center/jira-node"
-
-      # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
-      repository: "https://repo1.dso.mil/dsop/atlassian/jira-data-center/jira-node/-/issues/24"
-
-      # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
-      approval: "https://ironbank.dso.mil/repomap/details;registry1Path=atlassian%252Fjira-data-center%252Fjira-node?page=1&sort=1"
+      - name: "console"
+        repository: "https://repo1.dso.mil/dsop/twistlock/console/console/-/issues/1"
+        approval: "https://ironbank.dso.mil/repomap/details;registry1Path=twistlock%252Fconsole%252Fconsole"
+      - name: "defender"
+        repository: "https://repo1.dso.mil/dsop/twistlock/defender/defender/-/issues/1"
+        approval: "https://ironbank.dso.mil/repomap/details;registry1Path=twistlock%252Fdefender%252Fdefender"
 
     # Graduated: Links to required documentation
-    documentation: 
-    - "https://repo1.dso.mil/platform-one/big-bang/apps/third-party/jira/-/tree/main/docs"
+    documentation:
+    - "https://repo1.dso.mil/platform-one/big-bang/apps/security-tools/twistlock/-/tree/main/docs"
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
 
     # Sandbox: Verify required files (e.g. license, codeowners, contributors) in git repository
-    requiredFiles: "Ian Dunbar-Hall, 2 Feb 2022"
+    requiredFiles: "Thomas Runyon, 29 Jan 2022"
+
+    # Sandbox: Demonstratable product
+    productDemonstration: "Thomas Runyon, 29 Jan 2022"
 
     # Incubating: demonstrated support through contributions and feature releases
     committedSupport: ""
 
     # Graduated: Full Big Bang implementation
-    bigbangImplementation: ""
+    bigbangImplementation: "Thomas Runyon, 29 Jan 2022"
 
     # Graduated: Deployable against documented use cases
-    productDeployable: ""
+    productDeployable: "Thomas Runyon, 29 Jan 2022"
 
     # Graduated: Security support documentation
-    securityDocs: ""
+    securityDocs: "Thomas Runyon, 29 Jan 2022"
 
     # Graduated: Cyber security review and penetration testing
     cybersecurity: ""
