--- a/projects/sandbox/confluence.yaml
+++ b/projects/sandbox/confluence.yaml
@@ -70,8 +70,8 @@ spec:
     # Sandbox: Verify required files (e.g. license, codeowners, contributors) in git repository
     requiredFiles: "Ian Dunbar-Hall, 2 Feb 2022"
 
-    # Sandbox: Demonstratable product
-    productDemonstration: ""
+    # Sandbox: Demonstrable product
+    productDemonstration: "Ian Dunbar-Hall, 2 Feb 2022"
 
     # Incubating: demonstrated support through contributions and feature releases
     committedSupport: ""
