--- a/projects/incubating/gitlab.yaml
+++ b/projects/incubating/gitlab.yaml
@@ -9,22 +9,22 @@ metadata:
   vendor: "Gitlab"
 
   # Sandbox: Short description of the product
-  description: "Gitlab"
+  description: "Web based git repository manager with wiki and issue-tracking features."
 
   # Sandbox: URL(s) to product website for further information
   website:
-  - ""
+  - "https://about.gitlab.com/"
 
   # Sandbox: product source code repositories (e.g. github.com).  If not opensource, put "Proprietary"
   sourceCode:
-  - ""
+  - "https://gitlab.com/gitlab-org/gitlab"
 
   # Sandbox: Product licenses (e.g. Apache 2.0, GPL 3.0, MIT, Proprietary).  Include both free and paid tiers if they exist.
   license:
-  - ""
+  - "Apache 2.0"
 
   # Sandbox: Value the product brings to the Big Bang community
-  purpose: ""
+  purpose: "Provide a project management features, git repository, and package/container registries."
 
   # Maturity level of the package
   maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
@@ -48,13 +48,20 @@ spec:
     # Incubating: List of images contained in the package.
     images:
       # Incubating: Name of the image
-      - name: "too many to list"
+      - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitaly:14.8.2
+      - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-exporter:14.8.2
+      - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-shell:14.8.2"
+      - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-toolbox:14.8.2"
+      - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-webservice:14.8.2"
+      - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-sidekiq:14.8.2"
+    - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-workhorse:14.8.2"
+    - name: "docker pull registry1.dso.mil/ironbank/gitlab/gitlab/gitlab-container-registry:14.8.2"
 
         # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
-        repository: ""
+        repository: "https://repo1.dso.mil/groups/dsop/gitlab/-/issues"
 
         # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
-        approval: ""
+        approval: "https://ironbank.dso.mil/repomap/parent?vendor=Gitlab&product=gitlab"
 
     # Graduated: Links to required documentation
     documentation: []
@@ -63,13 +70,13 @@ spec:
   signOffs:
 
     # Sandbox: Verify required files (e.g. LICENSE, CODEOWNERS, CONTRIBUTING.md) in git repository
-    requiredFiles: ""
+    requiredFiles: "Andrew Greene, 28 FEB 2022"
 
     # Sandbox: Demonstratable product
-    productDemonstration: ""
+    productDemonstration: "Andrew Greene, 28 FEB 2022"
 
     # Incubating: demonstrated support through contributions and feature releases
-    committedSupport: ""
+    committedSupport: "Andrew Greene, 28 FEB 2022"
 
     # Graduated: Full Big Bang implementation
     bigbangImplementation: ""
